--- a/lab1/pliki/mystyle.css
+++ b/lab1/pliki/mystyle.css
@@ -1,13 +1,15 @@
 body {
 	background-image: url('backgroundphoto.jpg');
 	background-size: cover;
+	font-family: Helvetica, sans-serif;
+	color: white;
 }
 
 h1 {
 	color: white;
 }
 
-img {
+.img1 {
 	width: 300px;
 	height: auto;
 	max-heigth: 500px;
@@ -26,38 +28,59 @@ ul {
 
 a {
 	color: gold;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 li a {
 	display: block;
-	background-color: DarkOliveGreen;
+	background-color: rgb(70,0,0);
 	color: white;
-	display: inline;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 8px;
 	text-decoration: none;
 }
 
 li {
-	display: inline;
+	float: left;
 }
 
-.active {
-	background-color: black;
+li a:hover {
+	background-color: rgb(50,0,0);
 	}
+
+.active {
+	background-color: rgb(120,0,0);
+}
 	
 p {
 		font-size: 200%;
 		display: inline;
+		color: white;
 	}
 	
-div {
+table {
 	color: white;
 	text-align: center;
+}
+
+tr {
 	height: 600px;
 	width: 400px;
 	padding: 10px;
 	margin: 20px;
 	float: left;
 	background-color: rgba(50,0,0,0.7);
+}
+
+.obraz {
+	float: right;
+}
+
+
+.clearfix {
+	clear: both;
 }
